@@ -72,10 +72,6 @@
 
 (straight-use-package 'apheleia)
 
-;;;; Code highlighing
-
-(straight-use-package '(semel :host github :repo "eshelyaron/semel"))
-
 ;;; Search
 
 (straight-use-package 'rg)
